errori.txt
Model.cpp:24:8: error: no matching function for call to 'divide'
        arr = divide(nome_);
              ^~~~~~
./Components.h:43:13: note: candidate function not viable: requires 2 arguments, but 1 was provided
    string* divide(string s, int nelem);                                                       //metodo per dividere la stringa letta e caricarla in un array
            ^
1 error generated.
